After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793029 - Device lookup failures if multiple devices share the same event node.
Device lookup failures if multiple devices share the same event node.
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Wacom
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Carlos Garnacho
Control-Center Maintainers
: 793929 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2018-01-30 14:06 UTC by Carlos Garnacho
Modified: 2018-03-02 14:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
common: Use GdkDevices directly as HT keys on GsdDeviceManagerX11 (3.17 KB, patch)
2018-01-30 14:07 UTC, Carlos Garnacho
committed Details | Review

Description Carlos Garnacho 2018-01-30 14:06:18 UTC
On older kernels and wacom.ko modules, the driver may create a single event node that the X11 wacom driver manages to split into stylus/pad devices.

This plays odd with the way GsdDeviceManagerX11 does device accounting (by keeping a HT of the devices using device node paths as keys) resulting in the device that is added last to prevail over the others.

This code can be simplified though by making the HT use GdkDevice directly as the key, which does allow for devices with shared event node.
Comment 1 Carlos Garnacho 2018-01-30 14:07:02 UTC
Created attachment 367647 [details] [review]
common: Use GdkDevices directly as HT keys on GsdDeviceManagerX11

The dance we do to fetch event nodes from devices seems a bit superfluous
now, and even wrong if multiple X11 devices boil down to the same event
node.
Comment 2 Carlos Garnacho 2018-01-30 20:26:58 UTC
Pushed to master.

Attachment 367647 [details] pushed as 3bd8081 - common: Use GdkDevices directly as HT keys on GsdDeviceManagerX11
Comment 3 Ondrej Holy 2018-03-02 14:44:37 UTC
*** Bug 793929 has been marked as a duplicate of this bug. ***